--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Use the Objective-C Runtime from Node.js",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node demo.js",
     "build": "node-gyp rebuild",
     "clean": "node-gyp clean"
   },
